<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="SlayCafeString">Slay Cafe</string>
    <string name="Donuts">Donuts</string>
    <string name="addToOrderString">Add to Order</string>
    <string name="zeroPrice">$0.00</string>
    <string name="subTotalText">Subtotal:</string>
    <string name="addToOrder">Add to Order</string>
    <string name="coffee">Coffee</string>
    <string name="size">Size:</string>
    <string name="addOns">Add Ons:</string>
    <string name="milk">milk</string>
    <string name="cream">cream</string>
    <string name="syrup">syrup</string>
    <string name="caramel">caramel</string>
    <string name="whippedCream">whipped cream</string>
    <string name="yourOrder">Your Order</string>
    <string name="salesTax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="placeOrder">Place Order</string>
    <string name="storeOrders">Store Orders</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity:</string>
    <string name="donutFlavor">Donut Flavor</string>
</resources>