<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/zeroPrice"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeSubTotal"
        app:layout_constraintStart_toEndOf="@+id/coffeeSubTotal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/addToOrderString"
        app:layout_constraintBottom_toBottomOf="@+id/subTotal2"
        app:layout_constraintStart_toEndOf="@+id/subTotal2"
        app:layout_constraintTop_toTopOf="@+id/subTotal2" />

    <TextView
        android:id="@+id/coffeeSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/subTotalText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/syrup" />

    <TextView
        android:id="@+id/coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/coffee"
        android:textColor="@color/purple_200"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="113dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="229dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toTopOf="@+id/size" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/size"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/size" />

    <TextView
        android:id="@+id/addOns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/addOns"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <CheckBox
        android:id="@+id/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/milk"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/addOns"
        app:layout_constraintTop_toBottomOf="@+id/addOns" />

    <CheckBox
        android:id="@+id/cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cream"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/milk"
        app:layout_constraintTop_toBottomOf="@+id/milk" />

    <CheckBox
        android:id="@+id/caramel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/caramel"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/milk"
        app:layout_constraintTop_toTopOf="@+id/milk" />

    <CheckBox
        android:id="@+id/whippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whippedCream"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/caramel"
        app:layout_constraintTop_toTopOf="@+id/cream" />

    <CheckBox
        android:id="@+id/syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/syrup"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/cream"
        app:layout_constraintTop_toBottomOf="@+id/cream" />
</androidx.constraintlayout.widget.ConstraintLayout>