<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/orderSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:text="@string/zeroPrice"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/orderSubTotalText"
        app:layout_constraintStart_toEndOf="@+id/orderSubTotalText" />

    <TextView
        android:id="@+id/orderSalesTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroPrice"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/orderSalesTaxText"
        app:layout_constraintEnd_toEndOf="@+id/orderSubTotal" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroPrice"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/orderTotalText"
        app:layout_constraintEnd_toEndOf="@+id/orderSalesTax" />

    <TextView
        android:id="@+id/orderSubTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/subTotalText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/orderSalesTaxText"
        app:layout_constraintStart_toStartOf="@+id/orderSalesTaxText" />

    <TextView
        android:id="@+id/orderTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/total"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/placeOrder"
        app:layout_constraintStart_toStartOf="@+id/placeOrder" />

    <TextView
        android:id="@+id/orderSalesTaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/salesTax"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/orderTotalText"
        app:layout_constraintStart_toStartOf="@+id/orderTotalText" />

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="242dp"
        android:layout_height="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/placeOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <TextView
        android:id="@+id/yourOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/yourOrder"
        android:textColor="@color/purple_200"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/yourOrders"
        android:layout_width="404dp"
        android:layout_height="289dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/orderSubTotalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>